--- a/followership.html
+++ b/followership.html
@@ -337,22 +337,9 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-      <ul class="about-testimonials about-testimon-left">
-        <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-5.png" alt="img" /></li>
-      </ul>
-      <ul class="about-testimonials about-testimon-right">
-        <li><img src="assets/img/testim-right-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-      </ul>
+      
       <div class="container">
-        <h2 class="title-line">Diễn giả</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -360,7 +347,6 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-1.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
@@ -368,13 +354,12 @@
                 Tổ chức tốt, vui vẻ, có tính ứng dụng cao. 
 Chương trình giúp nâng cao kỹ năng, rất vui nhộn, không cảm thấy áp lực khi học.
               </div>
-              <h4 class="name">Louisa Russell</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Louisa Russell</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-2.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
@@ -382,13 +367,12 @@ Chương trình giúp nâng cao kỹ năng, rất vui nhộn, không cảm thấ
                 Chương trình bổ ích, áp dụng vào công việc sau này. 
                 Chuẩn bị công cụ và thiết bị tốt, Trainer truyền đạt tốt.
               </div>
-              <h4 class="name">Samson Peters</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Samson Peters</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-3.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
@@ -396,8 +380,8 @@ Chương trình giúp nâng cao kỹ năng, rất vui nhộn, không cảm thấ
                 Học vui, dễ hiểu. Giáo viên truyền đạt tốt, vui vẻ, thân thiện tạo không khí để dễ dàng tiếp thu. 
                 Kiến thức bổ ích giúp cải thiện cho công việc.
               </div>
-              <h4 class="name">Marry James</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Marry James</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
