--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>Tác phong làm việc</h2>
-              <div class="slide-tag">Workers</div>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">Tác phong làm việc</h2>
+              <div class="slide-tag">Nhân viên_Staff Level</div>
               <div class="slide-btn-cover">
                 <div class="block-QR">
                   <a href="single-events.html" class=""
@@ -167,11 +167,11 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 Tính tuân thủ các <span>quy định công ty </span>
               </h2>
-              <div class="slide-tag">Workers</div>
+              <div class="slide-tag">Nhân viên_Staff Level</div>
               <div class="slide-btn-cover">
                 <div class="block-QR">
                   <a href="single-events.html" class=""
@@ -197,11 +197,11 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Kỹ năng <span>làm việc cơ bản</span> </span>
               </h2>
-              <div class="slide-tag">Workers</div>
+              <div class="slide-tag">Nhân viên_Staff Level</div>
               <div class="slide-btn-cover">
                 <div class="block-QR">
                   <a href="single-events.html" class=""
@@ -227,8 +227,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Để làm việc hiệu quả <span>tại Doanh nghiệp </span></span
                 >(Tổng quan)
               </h2>
@@ -258,8 +258,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2><span>Để thực hiện tốt Hourensou</span>trong doanh nghiệp</h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px"><span>Để thực hiện tốt Hourensou</span>trong doanh nghiệp</h2>
               <div class="slide-tag">Nhân viên_Staff Level</div>
               <div class="slide-btn-cover">
                 <div class="block-QR">
@@ -286,8 +286,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2  style="font-size: 38px">
                 <span
                   >Phát huy tinh thần team-work nhằm đạt mục tiêu chung
                 </span>
@@ -318,7 +318,7 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
               <h2 style="font-size: 38px">
                 <span
                   >Ứng dụng kỹ năng quản lý thời gian hiệu quả & chu trình PDCA
@@ -351,8 +351,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2 style="font-size: 42px">
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Kỹ năng giao tiếp hiệu quả </span>
               </h2>
               <div class="slide-tag">Nhân viên_Staff Level</div>
@@ -381,8 +381,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Kỹ năng đối ứng <span>qua điện thoại</span></span>
               </h2>
               <div class="slide-tag">Nhân viên_Staff Level</div>
@@ -411,7 +411,7 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
               <h2 style="font-size: 38px">
                 <span>
                   Ứng dụng kỹ năng tư duy Logic<span
@@ -446,8 +446,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Nâng cao năng lực quản trị cho cấp trung </span>(Tổng
                 quan)
               </h2>
@@ -477,8 +477,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Kỹ năng phân công phân nhiệm </span>
               </h2>
               <div class="slide-tag">Quản lý_MIDDLE MANAGER</div>
@@ -507,9 +507,9 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div style="padding: 50px" class="date-slide">
+              <!-- <div style="padding: 50px" class="date-slide">
                 January 17, 2019 / Washington DC
-              </div>
+              </div> -->
               <h2 style="font-size: 38px">
                 <span
                   >Kỹ năng giao tiếp,
@@ -542,8 +542,8 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
-              <h2>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+              <h2 style="font-size: 38px">
                 <span>Kỹ năng lãnh đạo</span>
          
               </h2>
@@ -573,7 +573,7 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
               <h2 style="font-size: 38px">
                 <span>Kỹ năng giải quyết vấn đề</span>
               
@@ -604,9 +604,9 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide" style="padding-top: 50px">
+              <!-- <div class="date-slide" style="padding-top: 50px">
                 January 17, 2019 / Washington DC
-              </div>
+              </div> -->
               <h2 style="font-size: 38px">
                 <span
                   >Kỹ năng đào tạo và <span>huấn luyện Nhân viên</span></span
@@ -639,10 +639,10 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide" style="padding-top: 50px">
+              <!-- <div class="date-slide" style="padding-top: 50px">
                 January 17, 2019 / Washington DC
-              </div>
-              <h2>
+              </div> -->
+              <h2 style="font-size: 38px">
                 <span
                   >Phát huy tư duy tích cực để phát triển văn hoá Doanh
                   nghiệp</span
@@ -674,9 +674,9 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide" style="padding-top: 50px">
+              <!-- <div class="date-slide" style="padding-top: 50px">
                 January 17, 2019 / Washington DC
-              </div>
+              </div> -->
               <h2 style="font-size: 38px">
                 <span>Kỹ năng tổ chức cuộc họp hiệu quả</span>
               </h2>
@@ -706,7 +706,7 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide">January 17, 2019 / Washington DC</div>
+              <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
               <h2 style="font-size: 38px">
                 <span
                   >Kỹ năng xử lý phàn nàn để luôn có Khách hàng thân thiết</span
@@ -739,9 +739,9 @@
           />
           <div class="container">
             <div class="main-slide-item">
-              <div class="date-slide" style="padding-top: 50px">
+              <!-- <div class="date-slide" style="padding-top: 50px">
                 January 17, 2019 / Washington DC
-              </div>
+              </div> -->
               <h2 style="font-size: 38px">
                 <span
                   >Kỹ năng "sống còn" <span>của dân kinh doanh!</span>
@@ -818,14 +818,9 @@
           <div class="col-12 col-md-6 about-img">
             <a
               data-fancybox
-              href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0"
+              href="./assets/img/video-bg.mp4"
             >
-              <img
-                class="lazy"
-                src="assets/img/placeholder-all.png"
-                data-src="assets/img/news-2.jpg"
-                alt="img"
-              />
+              <video src="./assets/img/video-bg.mp4"></video>
             </a>
           </div>
         </div>
@@ -852,7 +847,7 @@
             <div class="speaker-item-img">
               <img
                 class="lazy"
-                src="assets/img/CEO_thumb.png"
+                src="assets/img/mshongthao.png"
                 alt="img"
               />
             </div>
