--- a/seminor.html
+++ b/seminor.html
@@ -177,7 +177,7 @@
       <div class="row team-cover">
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb01.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">Tác phong làm việc <br />
@@ -187,12 +187,13 @@
               (Business Manner)
             </span>
           </h4>
-          <div class="prof">WORKERS</div>
+          <div class="prof">Nhân viên -
+            Staff Level</div>
         </div>
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb02.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">Tính tuân thủ các quy định công ty <br />
@@ -202,11 +203,12 @@
               (Compliance)
             </span>
           </h4>
-          <div class="prof">WORKERS</div>
+          <div class="prof">Nhân viên -
+            Staff Level</div>
         </div>
         <div class="col-6 col-sm-4 team-item">
           <a href="basicWorkingSkills.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb03.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="basicWorkingSkills.html"></a>
@@ -218,12 +220,13 @@
               (Basic working skills)
             </span>
           </h4>
-          <div class="prof">WORKERS</div>
+          <div class="prof">Nhân viên -
+            Staff Level</div>
         </div>
 
         <div class="col-6 col-sm-4 team-item">
           <a href="workEffectivelyCompany.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb04.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="workEffectivelyCompany.html">Để làm việc hiệu quả tại <br /> Doanh nghiệp 
@@ -239,7 +242,7 @@
         </div>
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb05.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -257,7 +260,7 @@
         </div>
         <div class="col-6 col-sm-4 team-item">
           <a href="teamworkLeadership.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb06.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="teamworkLeadership.html">
@@ -274,7 +277,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="timeManagement.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb07.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="timeManagement.html">
@@ -293,7 +296,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="communicationSkill.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb08.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="communicationSkill.html">
@@ -307,7 +310,7 @@
         </div>
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb09.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -324,7 +327,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="#" class="team-img">
-            <img src="assets/img/team-2.jpg" alt="team" />
+            <img src="assets/img/thumb10.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="#">
@@ -340,7 +343,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="presentationSkill.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb11.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="presentationSkill.html">
@@ -356,7 +359,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb12.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -374,7 +377,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb13.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -389,7 +392,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="motivatedCommunication.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb14.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="motivatedCommunication.html">
@@ -405,7 +408,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="#" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb15.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="#">
@@ -414,12 +417,13 @@
             <span class="text-details">
               Kỹ năng lãnh đạo <br> (Leadership)
           </h4>
-          <div class="prof">CEO, Infodex</div>
+          <div class="prof">QUẢN LÝ-
+            MIDDLE MANAGER</div>
         </div>
 
         <div class="col-6 col-sm-4 team-item">
           <a href="problemSolvingCommunication.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb16.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="problemSolvingCommunication.html">
@@ -434,7 +438,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="#" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb17.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="#">
@@ -450,7 +454,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb18.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -465,7 +469,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb19.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -484,7 +488,7 @@
 
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb20.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -501,7 +505,7 @@ Skill of holding meeting effectively
         <!-- Sales-->
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb21.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
@@ -518,7 +522,7 @@ Client's claim shooting skill
         </div>
         <div class="col-6 col-sm-4 team-item">
           <a href="businessManner.html" class="team-img">
-            <img src="assets/img/team-1.jpg" alt="team" />
+            <img src="assets/img/thumb22.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
             <a href="businessManner.html">
