--- a/PDCA.html
+++ b/PDCA.html
@@ -85,10 +85,37 @@
                       <li><a href="home-two.html">Home 2</a></li>
                     </ul> -->
                   </li>
-                  <li><a href="./#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>                  <li><a href="seminor.html">Hội thảo</a></li>
-                  <li><a href="educationBusiness.html"><span class="text-center">Tư vấn <br> Doanh Nghiệp</span></a></li>
-                  <li><a href="CSKH.html"><span class="text-center">Tư vấn <br>Doanh Nghiệp CSKH </span></a></li>
-                  <li><a href="CSKH.html"><span class="text-center">Xúc tiến<br>Thương mại</span></a></li>
+                  <li>
+                    <a href="./#trainingHouse"
+                      ><span class="text-center"
+                        >Đào tạo <br />
+                        Doanh Nghiệp</span
+                      ></a
+                    >
+                  </li>
+                  <li><a href="seminor.html">Hội thảo</a></li>
+                  <li>
+                    <a href="educationBusiness.html"
+                      ><span class="text-center"
+                        >Tư vấn <br />
+                        Doanh Nghiệp</span
+                      ></a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html"
+                      ><span class="text-center"
+                        >Tư vấn <br />Doanh Nghiệp CSKH
+                      </span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html"
+                      ><span class="text-center"
+                        >Xúc tiến<br />Thương mại</span
+                      ></a
+                    >
+                  </li>
                   <li><a href="TVTD.html">Tư vấn tuyển dụng</a></li>
                   <!-- <li class="dropdown">
                     <a href="#"
@@ -330,22 +357,9 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-      <ul class="about-testimonials about-testimon-left">
-        <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-5.png" alt="img" /></li>
-      </ul>
-      <ul class="about-testimonials about-testimon-right">
-        <li><img src="assets/img/testim-right-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-      </ul>
+
       <div class="container">
-        <h2 class="title-line">Diễn giả</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -353,41 +367,42 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-1.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Các trò chơi mang tính học tập cao, dễ hiểu, không gây nhàm chán
               </div>
-              <h4 class="name">Louisa Russell</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Louisa Russell</h4> -->
+              <!-- <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-2.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Chương trình tốt cô Thảo dạy hay và truyền đạt những kĩ năng rất dễ hiểu.
+                Chương trình tốt cô Thảo dạy hay và truyền đạt những kĩ năng rất
+                dễ hiểu.
               </div>
-              <h4 class="name">Samson Peters</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Samson Peters</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-3.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Nâng cao kiến thức chuyên môn & nghiệp vụ trong công việc
               </div>
-              <h4 class="name">Marry James</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Marry James</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
