--- a/businessManner.html
+++ b/businessManner.html
@@ -335,22 +335,9 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-		<ul class="about-testimonials about-testimon-left">
-		  <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-left-4.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-left-5.png" alt="img" /></li>
-		</ul>
-		<ul class="about-testimonials about-testimon-right">
-		  <li><img src="assets/img/testim-right-1.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-right-2.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
-		  <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-		</ul>
+
 		<div class="container">
-		  <h2 class="title-line">Diễn giả</h2>
+		  <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
 		  <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -358,41 +345,41 @@
 		  <div class="slider-testimonials">
 			<div class="slide-testimonial">
 			  <div class="testimonial-item">
-				<img src="assets/img/testimonials-1.jpg" alt="img" />
+				<!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
 				<span class="slide-quote"
 				  ><i class="fa fa-quote-left" aria-hidden="true"></i
 				></span>
 				<div class="testimon-content">
 				  Chương trình thực tế ứng dụng cao, có thể áp dụng trong công việc hiện tại
 				</div>
-				<h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div>
+				<!-- <h4 class="name">Louisa Russell</h4>
+				<div class="prof">Regular Client</div> -->
 			  </div>
 			</div>
 			<div class="slide-testimonial">
 			  <div class="testimonial-item">
-				<img src="assets/img/testimonials-2.jpg" alt="img" />
+				<!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
 				<span class="slide-quote"
 				  ><i class="fa fa-quote-left" aria-hidden="true"></i
 				></span>
 				<div class="testimon-content">
 				  Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của tôi 
 				</div>
-				<h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div>
+				<!-- <h4 class="name">Samson Peters</h4>
+				<div class="prof">Regular Client</div> -->
 			  </div>
 			</div>
 			<div class="slide-testimonial">
 			  <div class="testimonial-item">
-				<img src="assets/img/testimonials-3.jpg" alt="img" />
+				<!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
 				<span class="slide-quote"
 				  ><i class="fa fa-quote-left" aria-hidden="true"></i
 				></span>
 				<div class="testimon-content">
           Học hỏi và bổ sung nhiều kiến thức cho bản thân.
 				</div>
-				<h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div>
+				<!-- <h4 class="name">Marry James</h4>
+				<div class="prof">Regular Client</div> -->
 			  </div>
 			</div>
 		  </div>
