--- a/communicationSkill.html
+++ b/communicationSkill.html
@@ -316,7 +316,7 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-      <ul class="about-testimonials about-testimon-left">
+      <!-- <ul class="about-testimonials about-testimon-left">
         <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
         <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
         <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
@@ -329,9 +329,9 @@
         <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
         <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
         <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-      </ul>
+      </ul> -->
       <div class="container">
-        <h2 class="title-line">Diễn giả</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -339,41 +339,41 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-1.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Được bổ sung kiến thức và kỹ năng như: kỹ năng giao tiếp, lắng nghe, kỹ năng check-mail và trả lời email và tác phong làm việc. 
               </div>
-              <h4 class="name">Louisa Russell</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Louisa Russell</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-2.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Học hỏi được nhiều điều hay, mới mẻ. Lớp học vui, thân thiện. Giảng viên dạy tốt, dễ hiểu
               </div>
-              <h4 class="name">Samson Peters</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Samson Peters</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-3.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Đưa ra những tình huống thực tế để đàm phán và giải pháp xử lý. 
               </div>
-              <h4 class="name">Marry James</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Marry James</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
