--- a/criticalThinking.html
+++ b/criticalThinking.html
@@ -295,7 +295,7 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-      <ul class="about-testimonials about-testimon-left">
+      <!-- <ul class="about-testimonials about-testimon-left">
         <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
         <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
         <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
@@ -308,9 +308,9 @@
         <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
         <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
         <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-      </ul>
+      </ul> -->
       <div class="container">
-        <h2 class="title-line">Diễn giả</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -318,41 +318,39 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-1.jpg" alt="img" />
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Giúp bản thân tự tin hơn trong quá trình làm việc. Tầm quan trọng PDCA
               </div>
-              <h4 class="name">Louisa Russell</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Louisa Russell</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-2.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Rẩt tốt, có thể ứng dụng nội dung buổi học về tư duy phản biện ngay khi trở về công việc hằng ngày
               </div>
-              <h4 class="name">Samson Peters</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Samson Peters</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-3.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
                 Tôi cảm thấy rất vui và bổ ích cho việc cải thiện bản thân trong công việc, trong suy nghĩ và hành động
               </div>
-              <h4 class="name">Marry James</h4>
-              <div class="prof">Regular Client</div>
+              <!-- <h4 class="name">Marry James</h4>
+              <div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
