--- a/timeManagement.html
+++ b/timeManagement.html
@@ -85,10 +85,37 @@
                       <li><a href="home-two.html">Home 2</a></li>
                     </ul> -->
                   </li>
-                  <li><a href="./#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>                  <li><a href="seminor.html">Hội thảo</a></li>
-                  <li><a href="educationBusiness.html"><span class="text-center">Tư vấn <br> Doanh Nghiệp</span></a></li>
-                  <li><a href="CSKH.html"><span class="text-center">Tư vấn <br>Doanh Nghiệp CSKH </span></a></li>
-                  <li><a href="CSKH.html"><span class="text-center">Xúc tiến<br>Thương mại</span></a></li>
+                  <li>
+                    <a href="./#trainingHouse"
+                      ><span class="text-center"
+                        >Đào tạo <br />
+                        Doanh Nghiệp</span
+                      ></a
+                    >
+                  </li>
+                  <li><a href="seminor.html">Hội thảo</a></li>
+                  <li>
+                    <a href="educationBusiness.html"
+                      ><span class="text-center"
+                        >Tư vấn <br />
+                        Doanh Nghiệp</span
+                      ></a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html"
+                      ><span class="text-center"
+                        >Tư vấn <br />Doanh Nghiệp CSKH
+                      </span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html"
+                      ><span class="text-center"
+                        >Xúc tiến<br />Thương mại</span
+                      ></a
+                    >
+                  </li>
                   <li><a href="TVTD.html">Tư vấn tuyển dụng</a></li>
                   <!-- <li class="dropdown">
                     <a href="#"
@@ -128,7 +155,7 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Quản lý thời giangian</h2>
+        <h2 class="title-line-left text-white">Quản lý thời gian</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
@@ -147,9 +174,7 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-               QUẢN LÝ THỜI GIAN HIỆU QUẢ
-              </h2>
+              <h2 class="title-line-left">QUẢN LÝ THỜI GIAN HIỆU QUẢ</h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
                 <p>1 ngày</p>
@@ -399,22 +424,8 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-      <ul class="about-testimonials about-testimon-left">
-        <li><img src="assets/img/testim-left-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-left-5.png" alt="img" /></li>
-      </ul>
-      <ul class="about-testimonials about-testimon-right">
-        <li><img src="assets/img/testim-right-1.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-2.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-3.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-4.png" alt="img" /></li>
-        <li><img src="assets/img/testim-right-5.png" alt="img" /></li>
-      </ul>
       <div class="container">
-        <h2 class="title-line">Diễn giả</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -422,41 +433,35 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-1.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Nội dung hôm nay rất vui và rất hợp lý để giúp tôi biết được các kỹ năng quản lý thời gian trong công việc và cuộc sống
+                Nội dung hôm nay rất vui và rất hợp lý để giúp tôi biết được các
+                kỹ năng quản lý thời gian trong công việc và cuộc sống
               </div>
-              <h4 class="name">Louisa Russell</h4>
-              <div class="prof">Regular Client</div>
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-2.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công việc hiện tại
+                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
+                việc hiện tại
               </div>
-              <h4 class="name">Samson Peters</h4>
-              <div class="prof">Regular Client</div>
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials-3.jpg" alt="img" />
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của tôi 
+                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
+                tôi
               </div>
-              <h4 class="name">Marry James</h4>
-              <div class="prof">Regular Client</div>
             </div>
           </div>
         </div>
