--- a/contacts.html
+++ b/contacts.html
@@ -67,27 +67,16 @@
 				<div class="col-12">
 				  <nav class="nav-menu">
 					<ul class="nav-list">
-					  <li class="dropdown">
-						<a href="index.html">Trang chủ</a>
-						<!-- <ul>
-						  <li class="active"><a href="index.html">Home 1</a></li>
-						  <li><a href="home-two.html">Home 2</a></li>
-						</ul> -->
+					  <li>
+						<a href="index.html" class='text-center'>Trang chủ</a>
 					  </li>
-					  <li><a href="./#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>					  <li><a href="seminor.html">Hội thảo</a></li>
-					  <li><a href="educationBusiness.html"><span class="text-center">Tư vấn <br> Doanh Nghiệp</span></a></li>
-					  <li><a href="CSKH.html"><span class="text-center">Tư vấn <br>Doanh Nghiệp CSKH </span></a></li>
-					  <li><a href="CSKH.html"><span class="text-center">Xúc tiến<br>Thương mại</span></a></li>
-					  <li><a href="TVTD.html">Tư vấn tuyển dụng</a></li>
-					  <!-- <li class="dropdown">
-						<a href="#"
-						  >pages <i class="fa fa-angle-down" aria-hidden="true"></i
-						></a>
-						<ul>
-						  <li><a href="pravicy-policy.html">Pravicy policy</a></li>
-						  <li><a href="404.html">404</a></li>
-						</ul>
-					  </li> -->
+					  <li><a href="#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
+					  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
+					  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
+					  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
+					  <li><a href="CSKH.html" class='text-center'>Xúc tiến Thương mại</a></li>
+					  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
+					
 					  <li><a href="contacts.html">Liên hệ</a></li>
 					</ul>
 				  </nav>
