--- a/middleManagamentSkill.html
+++ b/middleManagamentSkill.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <title>MMM - Omotenashi</title>
+    <title>Omotenashi</title>
     <!-- ===================== META ===================== -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -117,13 +117,15 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">MMM</h2>
+        <h2 class="title-line-left text-white">
+          Nâng cao năng lực quản trị cho cấp trung
+        </h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">MMM</li>
+            <li class="text-blue">Nâng cao năng lực quản trị cho cấp trung</li>
           </ul>
         </div>
       </div>
@@ -137,49 +139,36 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left">
-                NÂNG CAO NĂNG LỰC LÃNH ĐẠO GIÚP CẤP DƯỚI HOÀN THÀNH MỤC TIÊU
+                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
-                <p>2-3 ngày</p>
+                <p>1 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
+                <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu được vai trò & trách nhiệm của nhà quản lý</li>
+                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
                   <li>
-                    2. Nhận biết được yếu tố cốt lõi để trở thành người quản lý
-                    chuyên nghiệp
+                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
                   </li>
                   <li>
-                    3. Chuẩn chỉnh tác phong, thái độ làm việc cơ bản tại DN
-                    Nhật
+                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
+                    làm việc chuyên nghiệp
                   </li>
-                  <li>
-                    4. Hiểu rõ tính tuân thủ trong DN Nhật chính là ngăn ngừa
-                    các hành vi bất chính
-                  </li>
-                  <li>
-                    5. Hệ thống hoá các kỹ năng làm việc với nhân viên, định
-                    hướng, giao việc, tạo động lực cho nhân viên hăng hái hơn
-                    với công việc, hoàn thành mục tiêu được giao
-                  </li>
-                  <li>
-                    6. Nắm được các kỹ năng & mô hình phản hồi mang tính xây
-                    dựng, giúp nhân viên hiểu rõ điểm mạnh/cần cải thiện, từ đó
-                    tiếp tục tự hoàn thiện nhằm hoàn thành mục tiêu
-                  </li>
+                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
               </div>
 
               <div class="overview-info-item">
                 <h5>ĐỐI TƯỢNG:</h5>
                 <ol>
-                  <li>1. Cấp Quản lý</li>
+                  <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
-                    thức về quản lý cấp trung, phát triển đội nhóm
+                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
+                    chuyên nghiệp tại DN Nhật
                   </li>
                 </ol>
               </div>
@@ -263,79 +252,68 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần I: </span>Chân dung nhà quản lý chuyên nghiệp
-                </h4>
+                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
                 <ol>
-                  <li>1. 2 nhiệm vụ chính của quản lý</li>
-                  <li>2. Phân biệt giữa lãnh đạo & quản lý</li>
-                  <li>3. 3E làm nên 1 nhà quản lý chuyên nghiệp</li>
-                  <li>4. 10 kiểu lãnh đạo thất bại (tham khảo)</li>
-                  <li>5. 10 kiểu lãnh đạo thành công (tham khảo)</li>
+                  <li>1. Hiểu về tổ chức</li>
+                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>
+                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật và
+                    doanh nghiệp Việt/người Việt
+                  </li>
+                  <li>
+                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản, tác
+                    phong/kỹ năng cơ bản cần lưu ý
+                  </li>
                 </ol>
               </div>
               <div class="history-info">
                 <h4 class="title">
-                  <span>Phần II: </span>Nâng cao năng lực lãnh đạo, giúp cấp
-                  dưới hoàn thành mục tiêu
+                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
+                  nghiệp cơ bản tại doanh nghiệp Nhật
                 </h4>
-                <h5>I. Phát huy tinh thần leadership & team-work</h5>
                 <ol>
-                  <li>1. Team-work & tầm quan trọng</li>
-                  <li>2. Lãnh đạo & tầm quan trọng</li>
-                  <li>3. Nguyên tắc 5T & 5 Không</li>
-                  <li>4. Trách nhiệm của từng thành viên & Leader</li>
-                </ol>
-
-                <h5>II. Kỹ năng thiết lập mục tiêu SMART</h5>
-                <ol>
-                  <li>1. Nắm vững mục tiêu bộ phận</li>
-                  <li>2. 5 tiêu chí xây dựng mục tiêu SMART</li>
-                  <li>3. Áp dung 7W3H khi xây dựng mục tiêu SMART</li>
-                  <li>4. Lưu ý khi quản lý/xây dựng mục tiêu SMART</li>
-                </ol>
-
-                <h5>III. Thấu hiểu Nhân viên</h5>
-                <ol>
-                  <li>1. “Tảng băng chìm”</li>
-                  <li>2. Mô hình DISC</li>
-                  <li>3. 5 mức nhu cầu của con người theo Maslow</li>
                   <li>
-                    4. Mức độ thạo việc của Nhân viên (Ma trận Will/Skill)
+                    1. Tác phong cơ bản khi chào hỏi - Trang phục
+                    <ul>
+                      <li>
+                        - Chào hỏi (thái độ, âm lượng, giọng nói) trong nội bộ,
+                        với khách hàng
+                      </li>
+                      <li>- Trao danh thiếp</li>
+                      <li>- Vị trí ngồi trong phòng họp</li>
+                      <li>- Phục vụ trà nước</li>
+                      <li>- Tiễn khách trong thang máy</li>
+                      <li>- Cảm ơn – xin lỗi</li>
+                    </ul>
                   </li>
-                  <li>5. 4 kiểu giao tiếp cơ bản</li>
-                  <li>6. 10 kỳ vọng quan trọng đến Công ty, công việc</li>
-                </ol>
-
-                <h5>IV. Kỹ năng lập kế hoạch, giao việc & giám sát</h5>
-                <ol>
-                  <li>1. Lợi ích của giao việc</li>
-                  <li>2. 6 bước giao việc cho nhân viên</li>
-                  <li>3. Một số LƯU Ý khi giao việc</li>
-                </ol>
-
-                <h5>V. Kỹ năng giải quyết vấn đề triệt để</h5>
-                <ol>
-                  <li>1. Xác định vấn đề</li>
-                  <li>2. Phân tích nguyên nhân gốc rễ</li>
-                  <li>3. Đề xuất, lựa chọn giải pháp</li>
-                  <li>4. Thiết lập mục tiêu SMART</li>
-                  <li>5. Hành động PDCA</li>
-                  <li>6. Đánh giá hiệu quả</li>
-                </ol>
-
-                <h5>VI. Phản hồi mang tính xây dựng, tạo động lực</h5>
-                <ol>
-                  <li>1. Tầm quan trọng của tạo động lực cho nhân viên</li>
-                  <li>2. Thái độ - ngôn từ cơ bản khi giao tiếp với NV</li>
-                  <li>3. 3 bước giao tiếp cơ bản</li>
-                  <li>4. Lắng nghe thấu cảm</li>
-                  <li>5. 5 yếu tố lắng nghe tích cực</li>
-                  <li>6. 5 yếu tố trong SPEAK</li>
-                  <li>7. Ngôn ngữ cơ thể tích cực</li>
-                  <li>8. Mô hình phản hồi tích cực</li>
-                  <li>9. 10 bí quyết động viên NV</li>
-                  <li>10. 20 cách người quản lý ghi nhận</li>
+                  <li>
+                    2. Tác phong cơ bản trong khi làm việc
+                    <ul>
+                      <li>- Giữ chữ “Hòa” trong doanh nghiệp Nhật</li>
+                      <li>- Giờ giấc, cuộc hẹn</li>
+                      <li>- Đối ứng qua điện thoại</li>
+                      <li>- Giao tiếp qua email</li>
+                      <li>
+                        - Giao tiếp, gặp gỡ hàng ngày (thái độ, ngôn từ cơ bản):
+                        nên & không nên
+                      </li>
+                      <li>- 5S</li>
+                    </ul>
+                  </li>
+                  <li>
+                    3. Tính tuân thủ trong doanh nghiệp Nhật = Ngăn ngừa các
+                    hành vi bất chính
+                    <ul>
+                      <li>- Tính tuân thủ là gì?</li>
+                      <li>- Tầm quan trọng của việc tuân thủ</li>
+                      <li>
+                        - Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
+                      </li>
+                      <li>- Quản lý rủi ro về việc tuân thủ</li>
+                      <li>- Xử lý trường hợp không tuân thủ</li>
+                      <li>-Trách nhiệm & nghĩa vụ của Nhân viên</li>
+                    </ul>
+                  </li>
                 </ol>
               </div>
             </div>
@@ -348,7 +326,7 @@
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
       <div class="container">
-        <h2 class="title-line u">Ý kiến phản hồi</h2>
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
@@ -356,36 +334,43 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Chương trình mang lại nhiều kiến thức bổ ích giúp cải thiện kỹ
-                năng quản lý và nâng cao nhiều kỹ năng mềm cho cá nhân như viết
-                mail, nghe điện thoại, văn hóa giao tiếp
+                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
+                việc hiện tại
               </div>
+              <!-- <h4 class="name">Louisa Russell</h4>
+				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Chương trình bổ ích giúp người quản lý nhìn nhận những điểm mình
-                đã làm được và thiếu sót trong quá trình quản lý con người.
+                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
+                tôi
               </div>
+              <!-- <h4 class="name">Samson Peters</h4>
+				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
               <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span>
               <div class="testimon-content">
-                Giúp đỡ nhiều về tư duy lãnh đạo, cải thiện môi trường làm việc
-                trong công ty
+                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
               </div>
+              <!-- <h4 class="name">Marry James</h4>
+				<div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
