--- a/seminor.html
+++ b/seminor.html
@@ -67,28 +67,16 @@
           <div class="col-12">
             <nav class="nav-menu">
               <ul class="nav-list">
-                <li class="dropdown">
-                  <a href="index.html">Trang chủ</a>
-                  <!-- <ul>
-                    <li class="active"><a href="index.html">Home 1</a></li>
-                    <li><a href="home-two.html">Home 2</a></li>
-                  </ul> -->
+                <li>
+                  <a href="index.html" class='text-center'>Trang chủ</a>
                 </li>
-                <li><a href="./#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>
-                <li><a href="seminor.html">Hội thảo</a></li>
-                <li><a href="educationBusiness.html"><span class="text-center">Tư vấn <br> Doanh Nghiệp</span></a></li>
-                <li><a href="CSKH.html"><span class="text-center">Tư vấn <br>Doanh Nghiệp CSKH </span></a></li>
-                <li><a href="CSKH.html"><span class="text-center">Xúc tiến<br>Thương mại</span></a></li>
-                <li><a href="TVTD.html">Tư vấn tuyển dụng</a></li>
-                <!-- <li class="dropdown">
-                  <a href="#"
-                    >pages <i class="fa fa-angle-down" aria-hidden="true"></i
-                  ></a>
-                  <ul>
-                    <li><a href="pravicy-policy.html">Pravicy policy</a></li>
-                    <li><a href="404.html">404</a></li>
-                  </ul>
-                </li> -->
+                <li><a href="#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
+                <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
+                <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
+                <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
+                <li><a href="CSKH.html" class='text-center'>Xúc tiến Thương mại</a></li>
+                <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
+              
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
             </nav>
@@ -126,49 +114,6 @@
   </div>
   <!--================= PAGE-TITLE END =================-->
 
-  <!--=================== OUR-SPEAKERS ===================-->
-  <!-- <section class="our-speakers">
-		<div class="container">
-			<h2 class="title-line">Our Speakers</h2>
-			<p class="slogan">They possess the secret knowledge and interesting experience of creating a digital product.</p>
-			<div class="our-speakers-cover">
-				<div class="speaker-item">
-					<div class="speaker-item-img">
-						<img src="assets/img/speaker-1.jpg" alt="img">
-					</div>
-					<div class="speaker-item-content">
-						<h3>Anthony Watson</h3>
-						<div class="prof">CEO, IT Metrix</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-						<ul class="soc-link">
-							<li><a target="_blank" href="https://www.facebook.com/rovadex"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a target="_blank" href="https://www.behance.net/rovadex"><i class="fab fa-behance"></i></a></li>
-							<li><a target="_blank" href="https://www.linkedin.com/company/rovadex-com"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a target="_blank" href="https://twitter.com/RovadexStudio"><i class="fab fa-twitter"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="speaker-item">
-					<div class="speaker-item-img">
-						<img src="assets/img/speaker-2.jpg" alt="img">
-					</div>
-					<div class="speaker-item-content">
-						<h3>Marybeth Hoover</h3>
-						<div class="prof">CEO, IT Metrix</div>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
-						<ul class="soc-link">
-							<li><a target="_blank" href="https://www.facebook.com/rovadex"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a target="_blank" href="https://www.behance.net/rovadex"><i class="fab fa-behance"></i></a></li>
-							<li><a target="_blank" href="https://www.linkedin.com/company/rovadex-com"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a target="_blank" href="https://twitter.com/RovadexStudio"><i class="fab fa-twitter"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-  <!--================= OUR-SPEAKERS END =================-->
-
   <!--=================== S-OUR-TEAM ===================-->
   <section class="s-our-team about-team speakers-our-team">
     <div class="our-team-bg" style="background-image: url(assets/img/bg-team-about.svg)"></div>
@@ -192,11 +137,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="./compliance.html" class="team-img">
             <img src="assets/img/thumb02.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">Tính tuân thủ các quy định công ty <br />
+            <a href="./compliance.html">Tính tuân thủ các quy định công ty <br />
               (Compliance)</a>
             <span class="text-details">
               Tính tuân thủ các quy định công ty <br />
@@ -241,11 +186,11 @@
             Staff Level</div>
         </div>
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="./HRS.html" class="team-img">
             <img src="assets/img/thumb05.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="./HRS.html">
               Để thực hiện tốt Hourensou <br />
               (Báo cáo - Liên lạc - Thảo luận) trong doanh nghiệp.
             </a>
@@ -309,11 +254,11 @@
           <div class="prof">CEO, Infodex</div>
         </div>
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="callProfessionally.html" class="team-img">
             <img src="assets/img/thumb09.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="callProfessionally.html">
               Kỹ năng đối ứng qua <br> điện thoại
 
             </a>
@@ -326,11 +271,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="#" class="team-img">
+          <a href="logic.html" class="team-img">
             <img src="assets/img/thumb10.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="#">
+            <a href="logic.html">
               ỨNG DỤNG KỸ NĂNG TƯ DUY LOGIC TRONG CÔNG VIỆC:</a><span class="text-details">
               ỨNG DỤNG KỸ NĂNG TƯ DUY LOGIC TRONG CÔNG VIỆC: BẢN ĐỒ TƯ DUY,
               VẬN NÃO CÔNG, TƯ DUY 6 CHIẾC NÓN Logical Thinking: Mindmap,
@@ -358,11 +303,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="middleManagamentSkill.html" class="team-img">
             <img src="assets/img/thumb12.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="middleManagamentSkill.html">
               Nâng cao năng lực quản trị cho cấp trung <br>
               (Tổng quan)
             </a>
@@ -376,11 +321,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="delegationSkill.html" class="team-img">
             <img src="assets/img/thumb13.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="delegationSkill.html">
               Kỹ năng phân công phân nhiệm <br> (Delegation Skill)
             </a>
             <span class="text-details">
@@ -407,11 +352,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="#" class="team-img">
+          <a href="leadership.html" class="team-img">
             <img src="assets/img/thumb15.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="#">
+            <a href="leadership.html">
               Kỹ năng lãnh đạo <br> (Leadership)
             </a>
             <span class="text-details">
@@ -437,11 +382,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="#" class="team-img">
+          <a href="coachingSkill.html" class="team-img">
             <img src="assets/img/thumb17.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="#">
+            <a href="coachingSkill.html">
               Kỹ năng đào tạo và huấn luyện Nhân viên
             </a>
             <span class="text-details">
@@ -468,11 +413,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="enhancePositiveThinking.html" class="team-img">
             <img src="assets/img/thumb19.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="enhancePositiveThinking.html">
               Phát huy tư duy tích cực để phát triển
               văn hoá DN.
             </a>
@@ -487,11 +432,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="holdingMeeting.html" class="team-img">
             <img src="assets/img/thumb20.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="holdingMeeting.html">
               Kỹ năng tổ chức cuộc họp hiệu quả
             </a>
             <span class="text-details">
@@ -504,11 +449,11 @@ Skill of holding meeting effectively
 
         <!-- Sales-->
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="claimShooting.html" class="team-img">
             <img src="assets/img/thumb21.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="claimShooting.html">
               Kỹ năng xử lý phàn nàn để luôn có Khách hàng
 thân thiết
 
